# confirmation_parsers

./: docker-compose.yml
backend/: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml  robinhood_transactions.csv
backend/configs/: fidelity.yaml  robinhood.yaml
backend/src/models/: __init__.py  responses.py
backend/src/parsers/: confirmation_parser.py
backend/src/utils/: config_loader.py  job_manager.py  websocket_manager.py  worker_pool.py
frontend/: .dockerignore  dockerfile  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: FileUpload.tsx  HealthStatus.tsx  JobTable.tsx
frontend/src/hooks/: useJobStatusPolling.ts
